--- a/templates/skills.jade
+++ b/templates/skills.jade
@@ -1,2 +1,11 @@
 h3 Skills
-p (todo)
+table.u-full-width
+  thead
+    tr
+      th Program Languages
+      th Level
+  tbody
+  each skills in contents['skills.json'].metadata     
+    tr
+      td= skills.pl
+      td= skills.level
