--- a/templates/honors.jade
+++ b/templates/honors.jade
@@ -1,2 +1,13 @@
+
 h3 Honors
-p (todo)
+table.u-full-width
+  thead
+    tr
+      th Years
+      th Honor
+  tbody
+  each honor in contents['honors.json'].metadata
+    tr
+      td= honor.year
+      td= honor.Honor 
+
